objects/AppraisaltoAWSEndpoint__mdt.object
<CustomObject>
    <fields>
        <fullName>AWSEndpoint__c</fullName>
        <label>AWSEndpoint</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Appraisal_Code__c</fullName>
        <label>Appraisal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X_API_Key__c</fullName>
        <label>X-API-Key</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>AppraisaltoAWSEndpoint</label>
    <listViews>
        <fullName>All</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>AWSEndpoint__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <pluralLabel>AppraisaltoAWSEndpoints</pluralLabel>
</CustomObject>